cmake_minimum_required(VERSION 3.16)
project(emico)
include_directories(include)
add_library(
	emico
	STATIC
	src/emico.cpp
	src/font/roboto_medium.ttf.cpp
	src/font/roboto_thin_italic.ttf.cpp
	src/font/roboto_black.ttf.cpp
	src/font/roboto_light.ttf.cpp
	src/font/roboto.ttf.cpp
	src/font/roboto_light_italic.ttf.cpp
	src/font/roboto_italic.ttf.cpp
	src/font/roboto_bold_italic.ttf.cpp
	src/font/roboto_thin.ttf.cpp
	src/font/roboto_bold.ttf.cpp
	src/font/roboto_medium_italic.ttf.cpp
	src/font/roboto_black_italic.ttf.cpp
	src/icon/chart_line.png.cpp
	src/icon/ball_tennis.png.cpp
	src/icon/info_square.png.cpp
	src/icon/frame.png.cpp
	src/icon/plug.png.cpp
	src/icon/letter_a.png.cpp
	src/icon/arrow_right_circle.png.cpp
	src/icon/user.png.cpp
	src/icon/chevron_down.png.cpp
	src/icon/file_download.png.cpp
	src/icon/brand_google_drive.png.cpp
	src/icon/letter_i.png.cpp
	src/icon/sun.png.cpp
	src/icon/device_speaker.png.cpp
	src/icon/user_exclamation.png.cpp
	src/icon/shopping_cart.png.cpp
	src/icon/align_justified.png.cpp
	src/icon/unlink.png.cpp
	src/icon/droplet.png.cpp
	src/icon/record_mail.png.cpp
	src/icon/letter_l.png.cpp
	src/icon/parentheses.png.cpp
	src/icon/plane.png.cpp
	src/icon/friends.png.cpp
	src/icon/medal.png.cpp
	src/icon/letter_s.png.cpp
	src/icon/terminal.png.cpp
	src/icon/magnet.png.cpp
	src/icon/triangle.png.cpp
	src/icon/letter_v.png.cpp
	src/icon/mood_tongue.png.cpp
	src/icon/message.png.cpp
	src/icon/refresh.png.cpp
	src/icon/router.png.cpp
	src/icon/planet.png.cpp
	src/icon/accessible.png.cpp
	src/icon/border_top.png.cpp
	src/icon/layout_align_right.png.cpp
	src/icon/arrow_narrow_left.png.cpp
	src/icon/arrows_sort.png.cpp
	src/icon/strikethrough.png.cpp
	src/icon/letter_u.png.cpp
	src/icon/arrow_up_right.png.cpp
	src/icon/color_picker.png.cpp
	src/icon/phone_incoming.png.cpp
	src/icon/folder_minus.png.cpp
	src/icon/border_outer.png.cpp
	src/icon/map_2.png.cpp
	src/icon/circle.png.cpp
	src/icon/letter_w.png.cpp
	src/icon/flip_vertical.png.cpp
	src/icon/moon.png.cpp
	src/icon/chart_pie.png.cpp
	src/icon/chevrons_up.png.cpp
	src/icon/exchange.png.cpp
	src/icon/gift.png.cpp
	src/icon/device_mobile.png.cpp
	src/icon/archive.png.cpp
	src/icon/temperature_fahrenheit.png.cpp
	src/icon/chevrons_down.png.cpp
	src/icon/caret_down.png.cpp
	src/icon/heart.png.cpp
	src/icon/circle_check.png.cpp
	src/icon/notes.png.cpp
	src/icon/x.png.cpp
	src/icon/home.png.cpp
	src/icon/bulb.png.cpp
	src/icon/corner_up_left.png.cpp
	src/icon/letter_d.png.cpp
	src/icon/barcode.png.cpp
	src/icon/trees.png.cpp
	src/icon/device_tablet.png.cpp
	src/icon/layers_subtract.png.cpp
	src/icon/repeat.png.cpp
	src/icon/ice_cream.png.cpp
	src/icon/browser.png.cpp
	src/icon/rotate_clockwise_2.png.cpp
	src/icon/music.png.cpp
	src/icon/file_music.png.cpp
	src/icon/building_pavilon.png.cpp
	src/icon/puzzle.png.cpp
	src/icon/notification.png.cpp
	src/icon/sort_descending.png.cpp
	src/icon/artboard.png.cpp
	src/icon/infinity.png.cpp
	src/icon/layout_2.png.cpp
	src/icon/coin.png.cpp
	src/icon/arrow_left.png.cpp
	src/icon/circle_minus.png.cpp
	src/icon/eraser.png.cpp
	src/icon/mail_opened.png.cpp
	src/icon/clipboard_list.png.cpp
	src/icon/message_2.png.cpp
	src/icon/brand_github.png.cpp
	src/icon/car.png.cpp
	src/icon/server.png.cpp
	src/icon/arrow_down.png.cpp
	src/icon/border_radius.png.cpp
	src/icon/bell.png.cpp
	src/icon/ball_bowling.png.cpp
	src/icon/align_center.png.cpp
	src/icon/square_plus.png.cpp
	src/icon/sitemap.png.cpp
	src/icon/brand_tiktok.png.cpp
	src/icon/crosshair.png.cpp
	src/icon/layout_bottombar.png.cpp
	src/icon/snowflake.png.cpp
	src/icon/mood_confuzed.png.cpp
	src/icon/cut.png.cpp
	src/icon/truck_delivery.png.cpp
	src/icon/arrow_back.png.cpp
	src/icon/login.png.cpp
	src/icon/check.png.cpp
	src/icon/letter_q.png.cpp
	src/icon/camera_minus.png.cpp
	src/icon/award.png.cpp
	src/icon/recycle.png.cpp
	src/icon/at.png.cpp
	src/icon/glass_full.png.cpp
	src/icon/letter_e.png.cpp
	src/icon/link.png.cpp
	src/icon/battery_3.png.cpp
	src/icon/superscript.png.cpp
	src/icon/letter_b.png.cpp
	src/icon/cloud_storm.png.cpp
	src/icon/dice.png.cpp
	src/icon/thumb_up.png.cpp
	src/icon/brand_chrome.png.cpp
	src/icon/brand_messenger.png.cpp
	src/icon/line.png.cpp
	src/icon/truck_return.png.cpp
	src/icon/tools.png.cpp
	src/icon/headphones.png.cpp
	src/icon/mood_neutral.png.cpp
	src/icon/temperature_celsius.png.cpp
	src/icon/square_check.png.cpp
	src/icon/virus.png.cpp
	src/icon/drag_drop_2.png.cpp
	src/icon/layout_align_bottom.png.cpp
	src/icon/hash.png.cpp
	src/icon/power.png.cpp
	src/icon/layout_distribute_vertical.png.cpp
	src/icon/folders.png.cpp
	src/icon/letter_n.png.cpp
	src/icon/wallet.png.cpp
	src/icon/letter_r.png.cpp
	src/icon/scooter.png.cpp
	src/icon/slice.png.cpp
	src/icon/wind.png.cpp
	src/icon/parking.png.cpp
	src/icon/pill.png.cpp
	src/icon/arrow_bar_left.png.cpp
	src/icon/trending_down.png.cpp
	src/icon/target.png.cpp
	src/icon/layout_cards.png.cpp
	src/icon/corner_right_down.png.cpp
	src/icon/git_compare.png.cpp
	src/icon/building_community.png.cpp
	src/icon/phone.png.cpp
	src/icon/dots_vertical.png.cpp
	src/icon/chevron_up.png.cpp
	src/icon/dashboard.png.cpp
	src/icon/replace.png.cpp
	src/icon/arrow_down_circle.png.cpp
	src/icon/globe.png.cpp
	src/icon/direction_horizontal.png.cpp
	src/icon/columns.png.cpp
	src/icon/layout_align_left.png.cpp
	src/icon/currency_pound.png.cpp
	src/icon/battery_4.png.cpp
	src/icon/alien.png.cpp
	src/icon/layers_intersect.png.cpp
	src/icon/arrow_up_left_circle.png.cpp
	src/icon/file_check.png.cpp
	src/icon/user_minus.png.cpp
	src/icon/file.png.cpp
	src/icon/camera_plus.png.cpp
	src/icon/brand_whatsapp.png.cpp
	src/icon/building_skyscraper.png.cpp
	src/icon/layout_sidebar_right.png.cpp
	src/icon/glass.png.cpp
	src/icon/folder_plus.png.cpp
	src/icon/id.png.cpp
	src/icon/flip_horizontal.png.cpp
	src/icon/temperature_minus.png.cpp
	src/icon/inbox.png.cpp
	src/icon/arrow_forward_up.png.cpp
	src/icon/chevrons_right.png.cpp
	src/icon/tallymark_2.png.cpp
	src/icon/steering_wheel.png.cpp
	src/icon/qrcode.png.cpp
	src/icon/ticket.png.cpp
	src/icon/registered.png.cpp
	src/icon/upload.png.cpp
	src/icon/checks.png.cpp
	src/icon/temperature_plus.png.cpp
	src/icon/hexagon.png.cpp
	src/icon/letter_j.png.cpp
	src/icon/truck.png.cpp
	src/icon/chart_bar.png.cpp
	src/icon/caret_right.png.cpp
	src/icon/layout_distribute_horizontal.png.cpp
	src/icon/location.png.cpp
	src/icon/float_left.png.cpp
	src/icon/zoom_in.png.cpp
	src/icon/alert_triangle.png.cpp
	src/icon/chart_area_line.png.cpp
	src/icon/arrow_back_up.png.cpp
	src/icon/language.png.cpp
	src/icon/menu_2.png.cpp
	src/icon/building_bridge.png.cpp
	src/icon/egg.png.cpp
	src/icon/wifi_1.png.cpp
	src/icon/mood_happy.png.cpp
	src/icon/cloud_snow.png.cpp
	src/icon/arrow_bar_right.png.cpp
	src/icon/emphasis.png.cpp
	src/icon/printer.png.cpp
	src/icon/file_minus.png.cpp
	src/icon/ban.png.cpp
	src/icon/electric_scooter.png.cpp
	src/icon/letter_y.png.cpp
	src/icon/file_shredder.png.cpp
	src/icon/gauge.png.cpp
	src/icon/separator.png.cpp
	src/icon/corner_down_right.png.cpp
	src/icon/device_desktop.png.cpp
	src/icon/caret_up.png.cpp
	src/icon/brand_twitter.png.cpp
	src/icon/key.png.cpp
	src/icon/slideshow.png.cpp
	src/icon/yin_yang.png.cpp
	src/icon/ear.png.cpp
	src/icon/indent_increase.png.cpp
	src/icon/tallymarks.png.cpp
	src/icon/letters_case.png.cpp
	src/icon/paint.png.cpp
	src/icon/temperature.png.cpp
	src/icon/contrast.png.cpp
	src/icon/cloud_upload.png.cpp
	src/icon/arrow_down_right.png.cpp
	src/icon/apps.png.cpp
	src/icon/arrow_right.png.cpp
	src/icon/markdown.png.cpp
	src/icon/external_link.png.cpp
	src/icon/brand_codepen.png.cpp
	src/icon/devices.png.cpp
	src/icon/rotate.png.cpp
	src/icon/arrow_bar_up.png.cpp
	src/icon/cloud_rain.png.cpp
	src/icon/layout_sidebar.png.cpp
	src/icon/git_fork.png.cpp
	src/icon/microphone.png.cpp
	src/icon/home_2.png.cpp
	src/icon/command.png.cpp
	src/icon/battery_2.png.cpp
	src/icon/forklift.png.cpp
	src/icon/caret_left.png.cpp
	src/icon/sticker.png.cpp
	src/icon/bolt.png.cpp
	src/icon/brand_apple.png.cpp
	src/icon/corner_down_left.png.cpp
	src/icon/brand_safari.png.cpp
	src/icon/flag.png.cpp
	src/icon/device_mobile_vibration.png.cpp
	src/icon/arrow_down_left_circle.png.cpp
	src/icon/arrow_down_right_circle.png.cpp
	src/icon/square_x.png.cpp
	src/icon/forbid.png.cpp
	src/icon/layers_union.png.cpp
	src/icon/letter_h.png.cpp
	src/icon/device_gamepad.png.cpp
	src/icon/mood_kid.png.cpp
	src/icon/wifi_2.png.cpp
	src/icon/clipboard.png.cpp
	src/icon/tag.png.cpp
	src/icon/brand_facebook.png.cpp
	src/icon/flame.png.cpp
	src/icon/marquee.png.cpp
	src/icon/phone_call.png.cpp
	src/icon/sum.png.cpp
	src/icon/zoom_out.png.cpp
	src/icon/ad.png.cpp
	src/icon/battery.png.cpp
	src/icon/package.png.cpp
	src/icon/hand_stop.png.cpp
	src/icon/arrow_narrow_up.png.cpp
	src/icon/box.png.cpp
	src/icon/minimize.png.cpp
	src/icon/letter_x.png.cpp
	src/icon/adjustments_horizontal.png.cpp
	src/icon/thumb_down.png.cpp
	src/icon/pencil.png.cpp
	src/icon/float_center.png.cpp
	src/icon/layout_align_top.png.cpp
	src/icon/forbid_2.png.cpp
	src/icon/bed.png.cpp
	src/icon/ball_basketball.png.cpp
	src/icon/brand_snapchat.png.cpp
	src/icon/italic.png.cpp
	src/icon/phone_pause.png.cpp
	src/icon/plane_departure.png.cpp
	src/icon/mood_suprised.png.cpp
	src/icon/phone_outgoing.png.cpp
	src/icon/tractor.png.cpp
	src/icon/download.png.cpp
	src/icon/test_pipe.png.cpp
	src/icon/square_minus.png.cpp
	src/icon/layout_list.png.cpp
	src/icon/bookmark.png.cpp
	src/icon/viewfinder.png.cpp
	src/icon/bandage.png.cpp
	src/icon/capture.png.cpp
	src/icon/device_tv.png.cpp
	src/icon/clear_formatting.png.cpp
	src/icon/tallymark_4.png.cpp
	src/icon/map.png.cpp
	src/icon/woman.png.cpp
	src/icon/square.png.cpp
	src/icon/filter.png.cpp
	src/icon/disc.png.cpp
	src/icon/currency_euro.png.cpp
	src/icon/messages.png.cpp
	src/icon/repeat_once.png.cpp
	src/icon/trademark.png.cpp
	src/icon/brush.png.cpp
	src/icon/arrow_narrow_right.png.cpp
	src/icon/focus.png.cpp
	src/icon/drag_drop.png.cpp
	src/icon/calendar_event.png.cpp
	src/icon/rotate_rectangle.png.cpp
	src/icon/logout.png.cpp
	src/icon/arrow_narrow_down.png.cpp
	src/icon/bluetooth.png.cpp
	src/icon/rocket.png.cpp
	src/icon/battery_1.png.cpp
	src/icon/shape.png.cpp
	src/icon/border_right.png.cpp
	src/icon/camera.png.cpp
	src/icon/trophy.png.cpp
	src/icon/space.png.cpp
	src/icon/bulb_off.png.cpp
	src/icon/send.png.cpp
	src/icon/message_dots.png.cpp
	src/icon/maximize.png.cpp
	src/icon/typography.png.cpp
	src/icon/file_horizontal.png.cpp
	src/icon/cash.png.cpp
	src/icon/trending_up.png.cpp
	src/icon/border_none.png.cpp
	src/icon/database.png.cpp
	src/icon/arrows_minimize.png.cpp
	src/icon/ruler.png.cpp
	src/icon/arrows_vertical.png.cpp
	src/icon/arrow_up_circle.png.cpp
	src/icon/briefcase.png.cpp
	src/icon/direction.png.cpp
	src/icon/separator_vertical.png.cpp
	src/icon/world.png.cpp
	src/icon/layout_navbar.png.cpp
	src/icon/bold.png.cpp
	src/icon/list.png.cpp
	src/icon/flask.png.cpp
	src/icon/a_b.png.cpp
	src/icon/servicemark.png.cpp
	src/icon/ghost.png.cpp
	src/icon/brand_telegram.png.cpp
	src/icon/minus.png.cpp
	src/icon/arrow_bar_down.png.cpp
	src/icon/credit_card.png.cpp
	src/icon/adjustments_alt.png.cpp
	src/icon/aperture.png.cpp
	src/icon/layout.png.cpp
	src/icon/wifi_0.png.cpp
	src/icon/building.png.cpp
	src/icon/checkbox.png.cpp
	src/icon/ball_volleyball.png.cpp
	src/icon/letter_g.png.cpp
	src/icon/border_all.png.cpp
	src/icon/building_hospital.png.cpp
	src/icon/discount.png.cpp
	src/icon/color_swatch.png.cpp
	src/icon/git_commit.png.cpp
	src/icon/directions.png.cpp
	src/icon/subscript.png.cpp
	src/icon/brand_slack.png.cpp
	src/icon/info_circle.png.cpp
	src/icon/letter_p.png.cpp
	src/icon/corner_left_up.png.cpp
	src/icon/brand_instagram.png.cpp
	src/icon/user_check.png.cpp
	src/icon/file_text.png.cpp
	src/icon/template.png.cpp
	src/icon/route.png.cpp
	src/icon/mood_smile.png.cpp
	src/icon/brand_sketch.png.cpp
	src/icon/dots_diagonal_2.png.cpp
	src/icon/brand_behance.png.cpp
	src/icon/line_height.png.cpp
	src/icon/building_church.png.cpp
	src/icon/exposure.png.cpp
	src/icon/clock.png.cpp
	src/icon/brand_framer.png.cpp
	src/icon/compass.png.cpp
	src/icon/letter_c.png.cpp
	src/icon/chevron_right.png.cpp
	src/icon/math.png.cpp
	src/icon/border_bottom.png.cpp
	src/icon/grid.png.cpp
	src/icon/shirt.png.cpp
	src/icon/shield_check.png.cpp
	src/icon/list_check.png.cpp
	src/icon/eye.png.cpp
	src/icon/license.png.cpp
	src/icon/fingerprint.png.cpp
	src/icon/lego.png.cpp
	src/icon/dots_circle_horizontal.png.cpp
	src/icon/star.png.cpp
	src/icon/bucket.png.cpp
	src/icon/currency_dollar.png.cpp
	src/icon/dots_diagonal.png.cpp
	src/icon/backspace.png.cpp
	src/icon/arrow_up.png.cpp
	src/icon/urgent.png.cpp
	src/icon/brand_android.png.cpp
	src/icon/letter_m.png.cpp
	src/icon/separator_horizontal.png.cpp
	src/icon/settings.png.cpp
	src/icon/phone_check.png.cpp
	src/icon/underline.png.cpp
	src/icon/book.png.cpp
	src/icon/basket.png.cpp
	src/icon/corner_left_down.png.cpp
	src/icon/building_store.png.cpp
	src/icon/tool.png.cpp
	src/icon/bus.png.cpp
	src/icon/prompt.png.cpp
	src/icon/table.png.cpp
	src/icon/grip_horizontal.png.cpp
	src/icon/align_left.png.cpp
	src/icon/layout_rows.png.cpp
	src/icon/users.png.cpp
	src/icon/mouse.png.cpp
	src/icon/mug.png.cpp
	src/icon/news.png.cpp
	src/icon/hand_middle_finger.png.cpp
	src/icon/terminal_2.png.cpp
	src/icon/calendar_minus.png.cpp
	src/icon/layout_align_middle.png.cpp
	src/icon/braces.png.cpp
	src/icon/lifebuoy.png.cpp
	src/icon/rss.png.cpp
	src/icon/chart_bubble.png.cpp
	src/icon/device_watch.png.cpp
	src/icon/brand_google.png.cpp
	src/icon/arrows_diagonal_2.png.cpp
	src/icon/map_pin.png.cpp
	src/icon/viewport_wide.png.cpp
	src/icon/building_bridge_2.png.cpp
	src/icon/arrow_up_right_circle.png.cpp
	src/icon/disabled.png.cpp
	src/icon/medical_cross.png.cpp
	src/icon/calendar_plus.png.cpp
	src/icon/copy.png.cpp
	src/icon/arrow_up_left.png.cpp
	src/icon/alert_circle.png.cpp
	src/icon/arrow_down_left.png.cpp
	src/icon/toggle_right.png.cpp
	src/icon/bike.png.cpp
	src/icon/history.png.cpp
	src/icon/border_horizontal.png.cpp
	src/icon/umbrella.png.cpp
	src/icon/help.png.cpp
	src/icon/live_view.png.cpp
	src/icon/currency_yen.png.cpp
	src/icon/scan.png.cpp
	src/icon/focus_2.png.cpp
	src/icon/anchor.png.cpp
	src/icon/firetruck.png.cpp
	src/icon/git_branch.png.cpp
	src/icon/mood_sad.png.cpp
	src/icon/outlet.png.cpp
	src/icon/wifi.png.cpp
	src/icon/volume.png.cpp
	src/icon/switch_vertical.png.cpp
	src/icon/tir.png.cpp
	src/icon/letter_f.png.cpp
	src/icon/arrow_left_circle.png.cpp
	src/icon/circle_plus.png.cpp
	src/icon/lock.png.cpp
	src/icon/brightness_down.png.cpp
	src/icon/paperclip.png.cpp
	src/icon/file_code.png.cpp
	src/icon/corner_up_right.png.cpp
	src/icon/arrows_horizontal.png.cpp
	src/icon/tax.png.cpp
	src/icon/point.png.cpp
	src/icon/new_section.png.cpp
	src/icon/trash.png.cpp
	src/icon/viewport_narrow.png.cpp
	src/icon/file_x.png.cpp
	src/icon/copyright.png.cpp
	src/icon/ambulance.png.cpp
	src/icon/face_id.png.cpp
	src/icon/code.png.cpp
	src/icon/palette.png.cpp
	src/icon/mist.png.cpp
	src/icon/calculator.png.cpp
	src/icon/file_invoice.png.cpp
	src/icon/brackets.png.cpp
	src/icon/arrow_forward.png.cpp
	src/icon/copyleft.png.cpp
	src/icon/folder.png.cpp
	src/icon/dots.png.cpp
	src/icon/phone_plus.png.cpp
	src/icon/tallymark_1.png.cpp
	src/icon/clipboard_check.png.cpp
	src/icon/building_warehouse.png.cpp
	src/icon/border_left.png.cpp
	src/icon/layout_align_center.png.cpp
	src/icon/crop.png.cpp
	src/icon/selector.png.cpp
	src/icon/disabled_2.png.cpp
	src/icon/float_right.png.cpp
	src/icon/chevron_left.png.cpp
	src/icon/wand.png.cpp
	src/icon/folder_x.png.cpp
	src/icon/currency_rupee.png.cpp
	src/icon/layout_kanban.png.cpp
	src/icon/cloud.png.cpp
	src/icon/building_bank.png.cpp
	src/icon/man.png.cpp
	src/icon/chart_donut.png.cpp
	src/icon/click.png.cpp
	src/icon/shield.png.cpp
	src/icon/letter_t.png.cpp
	src/icon/zoom_cancel.png.cpp
	src/icon/presentation.png.cpp
	src/icon/git_pull_request.png.cpp
	src/icon/phone_x.png.cpp
	src/icon/layout_columns.png.cpp
	src/icon/live_photo.png.cpp
	src/icon/border_inner.png.cpp
	src/icon/scale.png.cpp
	src/icon/arrows_diagonal.png.cpp
	src/icon/text_wrap.png.cpp
	src/icon/menu.png.cpp
	src/icon/volume_3.png.cpp
	src/icon/social.png.cpp
	src/icon/chart_candle.png.cpp
	src/icon/currency_bitcoin.png.cpp
	src/icon/mail.png.cpp
	src/icon/brand_opera.png.cpp
	src/icon/sort_ascending.png.cpp
	src/icon/layers_difference.png.cpp
	src/icon/git_merge.png.cpp
	src/icon/note.png.cpp
	src/icon/headset.png.cpp
	src/icon/arrows_maximize.png.cpp
	src/icon/grip_vertical.png.cpp
	src/icon/atom_2.png.cpp
	src/icon/sunset.png.cpp
	src/icon/adjustments.png.cpp
	src/icon/grid_dots.png.cpp
	src/icon/traffic_cone.png.cpp
	src/icon/device_floppy.png.cpp
	src/icon/shield_x.png.cpp
	src/icon/brightness_up.png.cpp
	src/icon/scissors.png.cpp
	src/icon/chart_area.png.cpp
	src/icon/lock_open.png.cpp
	src/icon/user_plus.png.cpp
	src/icon/corner_right_up.png.cpp
	src/icon/tallymark_3.png.cpp
	src/icon/battery_charging.png.cpp
	src/icon/edit.png.cpp
	src/icon/diamond.png.cpp
	src/icon/letter_o.png.cpp
	src/icon/align_right.png.cpp
	src/icon/share.png.cpp
	src/icon/user_x.png.cpp
	src/icon/circle_x.png.cpp
	src/icon/switch.png.cpp
	src/icon/rotate_2.png.cpp
	src/icon/chevrons_left.png.cpp
	src/icon/sunshine.png.cpp
	src/icon/brand_dribbble.png.cpp
	src/icon/toggle_left.png.cpp
	src/icon/cast.png.cpp
	src/icon/rotate_clockwise.png.cpp
	src/icon/brand_paypal.png.cpp
	src/icon/alarm.png.cpp
	src/icon/switch_horizontal.png.cpp
	src/icon/omega.png.cpp
	src/icon/border_vertical.png.cpp
	src/icon/comet.png.cpp
	src/icon/brightness.png.cpp
	src/icon/atom.png.cpp
	src/icon/search.png.cpp
	src/icon/building_arch.png.cpp
	src/icon/brand_gitlab.png.cpp
	src/icon/activity.png.cpp
	src/icon/notebook.png.cpp
	src/icon/bug.png.cpp
	src/icon/file_plus.png.cpp
	src/icon/calendar.png.cpp
	src/icon/keyboard.png.cpp
	src/icon/device_laptop.png.cpp
	src/icon/indent_decrease.png.cpp
	src/icon/phone_calling.png.cpp
	src/icon/brand_medium.png.cpp
	src/icon/plane_arrival.png.cpp
	src/icon/letter_k.png.cpp
	src/icon/cloud_download.png.cpp
	src/icon/clipboard_x.png.cpp
	src/icon/letter_z.png.cpp
	src/icon/message_circle.png.cpp
	src/icon/photo.png.cpp
	src/icon/plus.png.cpp
	src/icon/volume_2.png.cpp
	src/icon/stack.png.cpp
	src/icon/movie.png.cpp
)
link_libraries(emico)
